// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QualityMetrics UnconnectedQualityMetrics render renders when errored 1`] = `
<div
  className="QualityMetrics"
>
  <Header
    lookback={48}
    service="test-service"
    services={
      Array [
        "foo",
        "bar",
        "baz",
      ]
    }
    setLookback={[Function]}
    setService={[Function]}
  />
  <div
    className="QualityMetrics--Error"
  >
    Error message
  </div>
</div>
`;

exports[`QualityMetrics UnconnectedQualityMetrics render renders when loading 1`] = `
<div
  className="QualityMetrics"
>
  <Header
    lookback={48}
    service="test-service"
    services={
      Array [
        "foo",
        "bar",
        "baz",
      ]
    }
    setLookback={[Function]}
    setService={[Function]}
  />
  <LoadingIndicator
    centered={true}
  />
</div>
`;

exports[`QualityMetrics UnconnectedQualityMetrics render renders with metrics 1`] = `
<div
  className="QualityMetrics"
>
  <Header
    lookback={48}
    service="test-service"
    services={
      Array [
        "foo",
        "bar",
        "baz",
      ]
    }
    setLookback={[Function]}
    setService={[Function]}
  />
</div>
`;

exports[`QualityMetrics UnconnectedQualityMetrics render renders without loading, error, or metrics 1`] = `
<div
  className="QualityMetrics"
>
  <Header
    lookback={48}
    services={
      Array [
        "foo",
        "bar",
        "baz",
      ]
    }
    setLookback={[Function]}
    setService={[Function]}
  />
</div>
`;
